# fundmatch

./: .env_example  Dockerfile  README.md  alembic.ini  boot.sh  docker-compose.yml  openapi.json  pyproject.toml
alembic/versions/: 2023-06-24_93a71210cc05_user_teams_ondelete_cascade.py  2023-06-24_ab146b656b48_add_users_and_teams.py  2023-06-25_0bb347be7806_add_unique_contribution.py  2023-06-25_2e90e85cd0d9_add_contribution.py  2023-06-25_ab82ed80550d_add_event.py
app/: main.py
app/config/: __init__.py  default.py
app/db/: crud.py  enums.py  main.py  models.py
app/endpoints/: __init__.py  auth.py  create_user.py  event.py  get_user.py  health_check.py  login.py  ping.py  team.py
app/schemas/: event.py  login.py  team.py  user.py
app/services/: event_manager.py  jwt_manager.py  login_handler.py  login_manager.py  team_manager.py
